--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-perfect-scrollbar": "^1.5.8",
     "tailwindcss-logical": "^3.0.1"
   },
   "devDependencies": {
