--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-perfect-scrollbar": "^1.5.8",
     "tailwindcss-logical": "^3.0.1"
   },
