--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-perfect-scrollbar": "^1.5.8",
-    "tailwindcss-logical": "^3.0.1"
+    "tailwindcss-logical": "^3.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
